@@ -241,6 +241,7 @@ if OS_SOLARIS
 # uses manual page section 4 for file formats (linux/freebsd use
 # section 5).  Automake can deal cleanly with man page sections 1-8
 # and n, but NOT with sections of the form 1m.
+# (TODO: Add update-smart-drivedb.1m)
 extra_MANS =      smartd.conf.4 \
                   smartctl.1m   \
                   smartd.1m
@@ -288,9 +289,15 @@ uninstall-man:
 	    -e 's/smartd\(.*\)(8)/smartd\1(1m)/g' > $@
 else
 # For systems that adopts traditional manner
+
 man_MANS =        smartd.conf.5 \
                   smartctl.8    \
                   smartd.8
+
+if ENABLE_DRIVEDB
+man_MANS += update-smart-drivedb.8
+endif
+
 endif
 
 docsdir=$(docdir)
@@ -364,6 +371,7 @@ EXTRA_DIST = \
         smartd.service.in \
         smartd_warning.sh.in \
         update-smart-drivedb.in \
+        update-smart-drivedb.8.in \
         m4/pkg.m4 \
         os_darwin/SMART.in \
         os_darwin/StartupParameters.plist \
@@ -402,6 +410,7 @@ CLEANFILES = \
         smartd_warning.sh \
         svnversion.h \
         update-smart-drivedb \
+        update-smart-drivedb.8 \
         SMART
 
 # 'make maintainer-clean' also removes files generated by './autogen.sh'
@@ -581,7 +590,8 @@ MAN_FILTER = \
         -e 's|!exampledir!|$(exampledir)/|g' \
         -e 's|/usr/local/etc/smartd\.conf|$(sysconfdir)/smartd.conf|g' \
         -e 's|/usr/local/etc/smartd_warning\.|$(sysconfdir)/smartd_warning.|g' \
-        -e 's|/usr/local/etc/smart_drivedb\.h|$(sysconfdir)/smart_drivedb.h|g' | \
+        -e 's|/usr/local/etc/smart_drivedb\.h|$(sysconfdir)/smart_drivedb.h|g' \
+        -e 's|RELEASE_6_0_DRIVEDB|@DRIVEDB_BRANCH@|g' | \
     $(MAN_ATTRIBUTELOG) | \
     $(MAN_CAPABILITIES) | \
     $(MAN_DRIVEDB) | \
@@ -610,6 +620,10 @@ smartd.8: smartd.8.in Makefile svnversion.h
 smartd.conf.5: smartd.conf.5.in Makefile svnversion.h
 	@echo '  cat $(srcdir)/smartd.conf.5.in | $$(MAN_FILTER) > $@'
 	@cat $(srcdir)/smartd.conf.5.in | $(MAN_FILTER) > $@
+
+update-smart-drivedb.8: update-smart-drivedb.8.in Makefile svnversion.h
+	@echo '  cat $(srcdir)/update-smart-drivedb.8.in | $$(MAN_FILTER) > $@'
+	@cat $(srcdir)/update-smart-drivedb.8.in | $(MAN_FILTER) > $@
 
 # Commands to convert man pages into .html and .txt
 # TODO: configure
